# SATySFi-fonts-noto-sans-cjk-sc

./: README.md  Satyristes  doc-fonts-noto-sans-cjk-sc.saty  fonts.satysfi-hash  satysfi-fonts-noto-sans-cjk-sc-doc.opam  satysfi-fonts-noto-sans-cjk-sc.opam
