opam-version: "2.0"
name: "satysfi-fonts-noto-sans-cjk-sc-doc"
version: "2.001"
synopsis: "Document of SATySFi Font Package for Noto Sans CJK SC fonts"
description: """
Document package for satysfi-fonts-noto-sans-cjk-sc
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-noto-sans-cjk-sc"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-noto-sans-cjk-sc/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-noto-sans-cjk-sc.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-fonts-noto-sans-cjk-sc" {= "2.001"}
]
build: [
  ["satyrographos" "opam" "build"
    "-name" "fonts-noto-sans-cjk-sc-doc"
    "-prefix" "%{prefix}%"
    "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "-name" "fonts-noto-sans-cjk-sc-doc"
    "-prefix" "%{prefix}%"
    "-script" "%{build}%/Satyristes"]
]
